# pyforge-profile

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: code-checks.yml  package-checks.yml  publish-checks.yml  publish.yml
docs/: api-reference.md  architecture.md  cli-reference.md  getting-started.md  index.md
scripts/: resolve_version.py
src/pyforge_profile/: __main__.py  collector.py  entry.py  executer.py  main.py  registry.py  reporter.py  resetter.py
tests/: base_test.py  conftest.py
